Center alignment and change terms and conditions on COA

--- a/bika/lims/browser/analysisrequest/templates/reports/Multi_AR_default.css
+++ b/bika/lims/browser/analysisrequest/templates/reports/Multi_AR_default.css
@@ -105,6 +105,13 @@
     margin-top:7px;
 }
 
+.result{
+    text-align:center;
+}
+.th_unit{
+    text-align: center;
+}
+
 .ar_table .unit,
 .ar_table .unit sub,
 .ar_table .unit sup {
@@ -112,6 +119,7 @@
     font-weight:normal;
     font-style:italic;
     font-size:7pt;
+    text-align: center;
 }
 
 div.resultsinterpretation {
