--- a/bika/lims/browser/analysisrequest/templates/reports/Multi_AR_default.css
+++ b/bika/lims/browser/analysisrequest/templates/reports/Multi_AR_default.css
@@ -148,3 +148,4 @@ div.resultsinterpretation_heading {
 .blue { background:blue; }
 .green { background:green; }
 .black { background:black; }
+a {text-decoration: none}
