Check if there analyses that have interims fields on the AR

--- a/bika/lims/browser/analysisrequest/templates/reports/default.css
+++ b/bika/lims/browser/analysisrequest/templates/reports/default.css
@@ -102,7 +102,13 @@
     line-height:1.6;
 }
 #report #section-results .result {
-    width:100px;
+    width:60px;
+}
+#report #section-results .previous,
+#report #section-results .analysis,
+#report #section-results .result,
+#report #section-results .outofrange {
+    white-space:nowrap;
 }
 #report #section-results .specs {
     width:200px;
